# rlhf-annotation-studio

./: .commitmsg  .dockerignore  .env.example  .gitignore  CICD.md  README.md  annotation-tool.html  docker-compose.yml  e2e-results.txt  garak-safety-test.ps1  package.json  vercel.json
backend/: .env.example  Dockerfile  README.md  _promote.py  fly.toml  promote_admin.py  pyproject.toml  seed_course_content.py  seed_task_packs.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_annotators_sessions.py  002_add_password_hash.py  003_add_task_packs.py  004_add_workspace_revisions.py  005_add_review_assignments.py  006_add_organizations.py  007_add_annotator_role.py  008_unique_review_assignment.py  009_add_api_keys.py  010_add_audit_logs.py  011_add_webhooks.py  012_add_datasets.py  013_add_consensus.py  014_add_iaa_results.py  015_add_quality_scores.py  016_add_llm_evaluations.py  017_add_exams.py  018_add_course_content.py  019_exam_review_rubric_scores.py  020_add_annotator_soft_delete.py  021_add_certificates.py
backend/app/: __init__.py  auth.py  config.py  db.py  exam_rubric.py  main.py
backend/app/middleware/: api_key_auth.py
backend/app/models/: __init__.py  annotator.py  api_key.py  audit_log.py  certificate.py  consensus.py  course.py  dataset.py  exam.py  iaa_result.py  llm_evaluation.py  organization.py  quality_score.py  review_assignment.py  task_pack.py  webhook.py  work_session.py  workspace_revision.py
backend/app/routers/: api_keys.py  audit.py  auth.py  certificates.py  consensus.py  course.py  datasets.py  exams.py  health.py  iaa.py  inference.py  judge.py  metrics.py  orgs.py  quality.py  reviews.py  sessions.py  tasks.py  webhooks.py
backend/app/schemas/: __init__.py  annotation_validation.py  annotator.py  api_key.py  audit_log.py  certificate.py  consensus.py  course.py  dataset.py  exam.py  gold_scoring.py  iaa.py  inference.py  llm_judge.py  metrics.py  organization.py  quality.py  review_assignment.py  session.py  task_pack.py  task_validation.py  webhook.py  workspace_revision.py
backend/app/services/: annotation_validation_service.py  api_key_service.py  audit_service.py  certificate_service.py  consensus_service.py  course_service.py  dataset_service.py  email_service.py  (+11 more)
backend/tasks/: debugging-exercises-python.json  hf-live-demo.json  m3-s07-cross-language-debugging.json
backend/tests/: conftest.py  test_task_validation_service.py  test_workspace_auth.py
sdk/: README.md  pyproject.toml
sdk/tests/: test_client.py
(+138 files in other folders)
