[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["app*", "rlhf_api*"]

[project]
name = "rlhf-annotation-api"
version = "0.1.0"
description = "FastAPI backend for RLHF Annotation Studio (Neon PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.31.0",
  "pydantic-settings>=2.6.0",
  "email-validator>=2.0.0",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "bcrypt>=4.0.0",
  "python-jose[cryptography]>=3.3.0",
  "agentmail>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
