[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlhf-studio"
version = "0.1.0"
description = "Python SDK for RLHF Annotation Studio"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
rlhf = "rlhf_studio.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/rlhf_studio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
